Right aligned search bar, fixed footer bugs, changed button colors

--- a/styles/accountStyle.css
+++ b/styles/accountStyle.css
@@ -14,16 +14,16 @@ body{
 
 /*SEARCH BAR CSS*/
 .search-bar-container{
-    background-image: linear-gradient(90deg, #7d5, #7158e2);
+    background-image: linear-gradient(90deg, #85E067, #5337D3);
     font-family: 'Lato', 'sans-serif';
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     /*height: 100vh;*/
     overflow: hidden;
     margin: 0;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
     transform: translateX(0); /* initial position */
     transition: transform 1s ease-out; /* Move search bar off-screen */
@@ -65,12 +65,13 @@ body{
     width: 200px;
 }
 .search.active .btn{
-    transform: translateX(198px);
+    transform: translateX(150px);
 }
 
 #input-label{
     font-weight: bold;
     margin-right: 25px;
+    color: white;
 }
 /*END SEARCH BAR CSS*/
 
@@ -83,17 +84,17 @@ body{
     min-height: 100vh;
     padding: 50px;
 }
-.container.show-nav{
+.container.show-nav {
     transform: rotate(-20deg);
 }
-.circle-container{
+.circle-container {
     position: fixed;
     top: -100px;
     left: -100px;
     z-index: 2;
 }
 .circle{
-    background-color: #ff7979;
+    background-color: #5337D3;
     height: 200px;
     width: 200px;
     border-radius: 50%;
@@ -106,7 +107,7 @@ body{
 }
 
 .circle button {
-    position: absolute;
+    position: absolute;;
     top: 50%;
     left: 50%;
     height: 100px;
@@ -143,7 +144,7 @@ nav {
     z-index: 100;
 }
 
-.nav ul {
+nav ul {
     list-style-type: none;
     padding-left: 30px;
 }
@@ -174,7 +175,6 @@ nav ul li + li + li + li {
 .content {
     max-width: 1000px;
     margin: 50px auto;
-
 }
 .content h1 {
     margin: 0;
@@ -183,7 +183,7 @@ nav ul li + li + li + li {
     color: #555;
     font-style: italic;
 }
-.content p{
+.content p {
     color: #333;
     line-height: 1.5;
 }
@@ -200,11 +200,11 @@ nav ul li a:hover {
 /*content style*/
 .content {
     background: #fff;
-    padding: 20px;
+    padding: 50px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 1000px;
-    margin: 20px auto;
+    margin: 50px auto;
     transition: box-shadow 0.3s ease-in-out;
 }
 
@@ -296,4 +296,19 @@ nav ul li a:hover {
 
 #deposit-button, #withdraw-button {
     margin: 10px 0;
+}
+
+/* Footer */
+footer {
+    min-height: 100px;
+    height: auto;
+    width: 100%;
+    right: 0;
+    background-color: #0C111D;
+    color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
