--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -14,16 +14,16 @@ body{
 
 /*SEARCH BAR CSS*/
 .search-bar-container{
-    background-image: linear-gradient(90deg, #7d5, #7158e2);
+    background-image: linear-gradient(90deg, #85E067, #5337D3);
     font-family: 'Lato', 'sans-serif';
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     /*height: 100vh;*/
     overflow: hidden;
     margin: 0;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
     transform: translateX(0); /* initial position */
     transition: transform 1s ease-out; /* Move search bar off-screen */
@@ -65,12 +65,13 @@ body{
     width: 200px;
 }
 .search.active .btn{
-    transform: translateX(198px);
+    transform: translateX(150px);
 }
 
 #input-label{
     font-weight: bold;
     margin-right: 25px;
+    color: white;
 }
 /*END SEARCH BAR CSS*/
 
@@ -93,7 +94,7 @@ body{
     z-index: 2;
 }
 .circle{
-    background-color: #ff7979;
+    background-color: #5337D3;
     height: 200px;
     width: 200px;
     border-radius: 50%;
@@ -173,7 +174,7 @@ nav ul li + li + li + li {
 
 .content {
     max-width: 1000px;
-    margin: 50px auto;
+    margin: 100px auto;
 }
 .content h1 {
     margin: 0;
@@ -221,17 +222,18 @@ nav ul li a:hover {
 /*End Portfolio list style*/
 
 
-/*Stock*/
+/* Footer */
 footer {
+    min-height: 100px;
     height: auto;
-    width: 100vw;
+    width: 100%;
     right: 0;
     background-color: #0C111D;
     color: white;
     position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
@@ -243,10 +245,19 @@ footer {
 }
 
 /* Image Carousel */
+.image-carousel {
+    border-top: 1px solid lightgray;
+    margin-bottom: 40px;
+}
+
 #lightbox {
     width: 100%;
     position: relative;
     /* overflow: hidden; */
+}
+
+#lbTitle {
+    margin-top: 50px;
 }
 
 #lbImages {
@@ -259,7 +270,7 @@ footer {
     height: 40vh;
     width: auto;
     object-fit: cover;
-    margin: 20px;
+    margin: 10px 40px 20px 0px;
     cursor: pointer;
 }
 
@@ -268,24 +279,24 @@ footer {
     cursor: pointer;
     position: absolute;
     z-index: 1;
-}
-
-#lbPrev, #lbNext {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+    font-size: 12px;
+    background-color: #5337D3;
+    border-radius: 3px;
+}
+
+#lbPrev, #lbNext {
     top: 50%;
     transform: translateY(50%);
-    color: white;
-    background-color: gray;
     width: 25px;
     height: 25px;
-    border-radius: 3px;
-    font-size: 12px;
 }
 
 #lbPrev {
-    left: 30px;
+    left: 10px;
 }
 
 #lbNext {
@@ -293,12 +304,10 @@ footer {
 }
 
 #lbPlay {
-    left: 50%;
+    left: calc(50% - 20px);
     transform: translateX(-50%);
-    padding: 0;
-    width: 25px;
-    height: 25px;
-    font-size: 24px;
+    width: 40px;
+    height: 40px;
 }
 
 #lbOverlayClose {
@@ -309,6 +318,7 @@ footer {
     top: 50px;
     font-size: 1.75em;
     color: white;
+    background-color: transparent;
 }
 
 #lbOverlay {
