--- a/styles/loginStyle.css
+++ b/styles/loginStyle.css
@@ -108,19 +108,20 @@ body {
     margin: 5px 0px;
     border: none;
     border-radius: 4px;
-    background-color: #5C6BC0;
+    background-color: #5337D3;
     color: white;
     cursor: pointer;
 }
 
 .login-form button:hover {
-    background-color: #3949AB;
+    background-color: #3D25A7;
 }
 
 /*Footer*/
 footer {
+    min-height: 100px;
     height: auto;
-    width: 100vw;
+    width: 100%;
     right: 0;
     background-color: #0C111D;
     color: white;
